# gnome-inbox

./: .editorconfig  .gitignore  App.js  Application.js  COPYING  Cargo.toml  MainWindow.js  Makefile  PKGBUILD  README.md  WebView.js  index.js  io.mspencer.Inbox.json  meson.build  package.json
data/: io.mspencer.Inbox.data.gresource.xml  io.mspencer.Inbox.desktop  io.mspencer.Inbox.desktop.in  io.mspencer.Inbox.service.in  meson.build
data/webview/: gmail.js  inbox.css  inbox.js
flatpak/: jsgtk.json
meson/: post_install.sh
refix/share/applications/: io.mspencer.Inbox.desktop
src/: Application.js  Application.ts  DOM.js  DOM.ts  GmailWebView.js  GmailWebView.ts  InboxWebView.js  InboxWebView.ts  MainWindow.js  MainWindow.ts  WebView.js  app.rs  dom.rs  gmail.rs  inbox.rs  index.ts  io.mspencer.Inbox.in  main.rs  meson.build  ui.rs  utils.js  utils.ts  webview.rs  window.rs
src/injected/: gmail.js  inbox.js  shared.js
