[package]
authors = ["Michael Spencer <sonrisesoftware@gmail.com>"]
name = "gnome-inbox"
version = "0.1.0"
[dependencies]
gio = "*"
glib = "*"
itertools = "*"
relm = "*"
relm-derive = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[dependencies.gtk]
features = ["v3_16"]
version = "*"

[dependencies.webkit2gtk]
features = ["v2_12"]
version = "*"
